<resources>
    <string name="app_name">ServiceDesk Mobile</string>
    <string name="consultar_chamados">Consultar Chamados</string>
    <string name="novo_chamado">Novo Chamado</string>
    <string name="fechar_chamado">Fechar Chamado</string>
    <string name="descricao">Descrição</string>
    <string name="tipo_fila">Fila</string>
    <string name="listar_chamados">Listar Chamados</string>
    <string name="escolha_fila">Escolha a fila</string>
    <string name="escolha_status">Escolha o Status</string>
    <string name="fechar_msg">Selecione os chamados que deseja fechar.</string>
    <string name="listar_chamados_abertos">Listar Chamados abertos</string>
    <string name="salvar_chamado">Salvar Chamado</string>
    <string name="lista_status">Consultar por Status</string>
    <string name="lista_fila">Consultar por Fila</string>
    <string name="lista_todos">Consultar Todos</string>
    <string name="numero_chamado">Numero do Chamado </string>
    <string name="chamado_aberto">Chamado aberto com sucesso!</string>
    <string name="status">Status</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="fechar_chamado_confirmation">Deseja realmente fechar esse chamado?</string>
    <string name="aguarde">Aguarde</string>
    <string name="msg_aguarde">Conectando aos nossos servidores</string>
    <string name="campos_incorretos">Favor preecher os campos corretamente!</string>
    <string name="erro_criacao">Erro de criação de Chamado! Favor tente novamente!</string>
</resources>
