<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="left"
    tools:context="android.projeto.com.br.appservicedesk.MenuDeChamados"
    android:stretchColumns="1">



        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/novo_chamado"
                android:id="@+id/novo_button"
                android:layout_column="1"
                android:background="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/material_grey_300"
                android:onClick="novoChamado"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/fechar_chamado"
                android:id="@+id/fechar_button"
                android:layout_column="1"
                android:background="@color/accent_material_dark"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/material_grey_300"
                android:onClick="fecharChamados"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/consultar_chamados"
                android:id="@+id/consultar_button"
                android:layout_column="1"
                android:background="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/material_grey_300"
                android:onClick="consultarChamados"/>
        </TableRow>

    </TableLayout>
