<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    tools:context=".controller.NovoChamado">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">


        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/descricao"
                android:hint="@string/descricao"
                android:ellipsize="none"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="20"
                android:scrollHorizontally="false"
                android:maxLength="@android:integer/status_bar_notification_info_maxnum" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:text="@string/escolha_fila"
                android:textStyle="bold"
                android:textColor="@color/abc_primary_text_material_light" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:orientation="horizontal"
            android:layout_weight="0.3">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:labelFor="@string/escolha_fila"
                android:longClickable="true"
                android:id="@+id/tiposDeFila" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:orientation="horizontal"
            android:layout_weight="1">

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salvar_chamado"
                android:id="@+id/button"
                android:textColor="@color/material_grey_300"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:enabled="true"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:padding="10dp"
                android:paddingTop="10dp"
                android:onClick="registrarChamado"/>
        </TableRow>
    </TableLayout>

</LinearLayout>
